# otus-cpp-1

./: .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  build_number.h  build_number.h.in  main.cpp  version.cpp
tests/: CMakeLists.txt  main.cpp
