cmake_minimum_required(VERSION 3.16.0)
project(lesson_1 VERSION 0.1.0)

include(CTest)
enable_testing()

include_directories(src)
add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(lib/googletest)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
